--- a/style.css
+++ b/style.css
@@ -37,13 +37,13 @@ h1 {
 
 .box {
     position: absolute;
-    color: azure;
+    color: white;
     width: 33.3%;
     height: 33.3%;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 8vw;
+    font-size: 9vw;
     font-weight: bold;
 }
 
@@ -75,4 +75,22 @@ h1 {
 
 #box_6, #box_7, #box_8 {
     top: 66.6%;
+}
+
+#button-container{
+    text-align: center;
+    padding-top: 3%;
+}
+
+button{
+    color: white;
+    background-color: black;
+    border: none;
+    font-size: 2vw;
+    outline: none;
+}
+
+/* Remove dotted border on FireFox browser */
+button::-moz-focus-inner {
+    border: none;
 }
