--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ h1 {
     font-size: 3vw;
     color: white;
     text-align: center;
-    padding-top: 4%;
-    padding-bottom: 2%;
+    padding-top: 2%;
+    padding-bottom: 1%;
 }
 
 #board {
@@ -79,7 +79,7 @@ h1 {
 
 #button-container{
     text-align: center;
-    padding-top: 3%;
+    padding-top: 1%
 }
 
 button{
